END exercise + bonus
comments added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     </main>
 
-    <footer>Made with &hearts; by <a href="https://www.boolean.careers" style="padding-left: 10px;">Boolean</a> </footer>
+    <footer>Made with &hearts; by <a href="" style="padding-left: 10px;">DAVIKS</a> </footer>
 
 
 
